--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel": "^8.0.0",
+    "flowbite": "^2.3.0",
+    "jquery": "^3.7.1",
     "next": "14.1.3",
+    "owl.carousel": "^2.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -17,6 +21,8 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.3",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
