--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "embla-carousel": "^8.0.0",
     "flowbite": "^2.3.0",
+    "framer-motion": "^11.0.25",
     "jquery": "^3.7.1",
     "next": "14.1.3",
     "owl.carousel": "^2.3.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
